fixed difficulty options on mobile portrait

--- a/style.css
+++ b/style.css
@@ -626,6 +626,17 @@ h3 {
     from {opacity: 0; height: 0; width: 0; font-size: 0;}
     to {opacity: 1; height: 45px; width: 80%; font-size: 180%;}
   }
+
+  .difficulty_buttons {
+    margin: 8% auto;
+  }
+
+  .easy p, 
+  .medium p, 
+  .hard p, 
+  #soccer {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 360px){
@@ -633,8 +644,18 @@ h3 {
     font-size: 250%;
   }
 
+  .deck_buttons, 
+  .difficulty_buttons {
+    line-height: 35px;
+  }
+
   @keyframes fade_in_title {
     from {opacity: 0; font-size: 0;}
     to {opacity: 1; font-size: 150%;}
+  }
+
+  @keyframes fade_in_buttons {
+    from {opacity: 0; height: 0; width: 0; font-size: 0;}
+    to {opacity: 1; height: 35px; width: 80%; font-size: 180%;}
   }
 }
